Fix high-resolution vertical alignment

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
   display: grid;
   width: 100vw;
   height: 100vh;
-  grid-template-rows: minmax(102px, max-content) 1fr;
+  grid-template-rows: minmax(102px, max-content) auto;
   grid-template-columns: 1fr;
   grid-template-areas: 'data' 'results';
 }
@@ -77,16 +77,13 @@ input::placeholder {
   display: flex;
   flex-flow: column wrap;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
+  align-content: flex-start;
   justify-content: center;
   overflow-y: auto;
   overflow-x: hidden;
   grid-area: results;
-}
-
-.top-spacer {
-  height: 20px;
-  width: 100%;
+  padding-top: 20px;
 }
 
 .shirt {
